agregamos estilos css al blog

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>probando git</title>
 </head>
 <body>
-    <h1>titulo del blog</h1>
-    <h3>subtitulo del blog</h3>
-    <p>
+    <h1 class="centrado">titulo del blog</h1>
+    <h3 class="centrado">subtitulo del blog</h3>
+    <p class="centrado">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim earum, 
        eos tenetur fuga consequuntur similique expedita adipisci delectus 
        praesentium dolore quae voluptatibus excepturi laborum doloremque 
