agregue un boton y cambie fondo

--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <title>probando git</title>
 </head>
 <body>
-    <h1 class="centrado">titulo del blog</h1>
-    <h3 class="centrado">subtitulo del blog</h3>
-    <p class="centrado">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim earum, 
-       eos tenetur fuga consequuntur similique expedita adipisci delectus 
-       praesentium dolore quae voluptatibus excepturi laborum doloremque 
-       omnis commodi saepe! Obcaecati, voluptate.
-    </p>
+    <div class="container">
+        <h1 class="centrado">titulo del blog</h1>
+        <h3 class="sub">subtitulo del blog</h3>
+        <p class="sub">
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim earum, 
+             eos tenetur fuga consequuntur similique expedita adipisci delectus 
+             praesentium dolore quae voluptatibus excepturi laborum doloremque 
+             omnis commodi saepe! Obcaecati, voluptate.
+        </p>
+        <button>CLICK ME</button>
+    </div>
+    
 </body>
 </html>
