esta es la cabecera

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="container">
+        <div id="cabecera"> esta es la cabecera</div>
         <h1 class="centrado">titulo del blog</h1>
         <h3 class="sub">subtitulo del blog</h3>
         <p class="sub">
