cambie la cabecera y cambie el fondo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="cabecera"> Esta es la cabecera - disfrute</div>
+        <div id="cabecera"> Esta es la cabecera - pase a ver</div>
         <h1 class="centrado">titulo del blog</h1>
         <h3 class="sub">subtitulo del blog</h3>
         <p class="sub">
